Logging/firewallbase.txt
# Generated by iptables-save v1.8.7 on Wed Dec 20 18:54:58 2023
*filter
#in/forward/out rules
:INPUT ACCEPT [16:1170]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#Accepted UDP
-A INPUT -p udp -m udp --dport 1332 -j ACCEPT
#Accpeted TCP
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1332 -j ACCEPT
#Accepted ICMP

#Acceptence Policy
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i lo -j ACCEPT
#Invalid packets
-A INPUT -m conntrack --ctstate INVALID -j DROP
#Protocol-Specific Chains
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp --syn -m conntrack --ctstate NEW -j TCP
-A INPUT -p icmp -m conntrack --ctstate NEW -j ICMP
#Rejection Policy
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
COMMIT
# Completed on Wed Dec 20 18:54:58 2023
